<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="@color/colorAddCVBackground"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context="com.example.shaba.gulfexperts.Activities.AddCV">

<android.support.v7.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@android:color/black" />
    </android.support.design.widget.TextInputLayout>




    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:hint="@string/hint_email"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/black" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <net.rimoto.intlphoneinput.IntlPhoneInput
            android:id="@+id/Input_Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:hint="phone number"
            android:inputType="phone"
            android:maxLines="1"
            android:textColor="@android:color/black" />
   </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/major_spinnertLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <Spinner
            android:id="@+id/major_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:drawable/btn_dropdown"
            android:dropDownWidth="fill_parent"
            android:entries="@array/major_arrays"
            android:prompt="@string/major_prompt" />


    </android.support.design.widget.TextInputLayout>


    <!--<android.support.design.widget.TextInputLayout-->
        <!--android:id="@+id/minor_spinnerLayout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="30dp">-->


    <!--<Spinner-->
            <!--android:id="@+id/minor_spinner"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="40dp"-->
            <!--android:background="@android:drawable/btn_dropdown"-->
            <!--android:dropDownWidth="fill_parent" />-->

<!--</android.support.design.widget.TextInputLayout>-->


    <android.support.design.widget.TextInputLayout
        android:id="@+id/country_spinnerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">


    <Spinner
            android:id="@+id/country_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:drawable/btn_dropdown"
            android:dropDownWidth="fill_parent"
            android:entries="@array/country_arrays"
            android:prompt="@string/country_prompt" />
  </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/work_spinnerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

    <Spinner
            android:id="@+id/work_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:drawable/btn_dropdown"
            android:dropDownWidth="fill_parent"
            android:entries="@array/work_arrays"
            android:prompt="@string/work_prompt" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutWork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:hint="work"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/black" />
    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorContactUsButton"
        android:text="Send" />





</android.support.v7.widget.LinearLayoutCompat>


</android.support.v4.widget.NestedScrollView>
