<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.example.shaba.gulfexperts.Fragments.AdvanceSearchFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="362dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">


            <EditText
                android:id="@+id/nameTxt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">


            <Spinner
                android:id="@+id/major_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:drawable/btn_dropdown"
                android:dropDownWidth="fill_parent"
                android:entries="@array/major_arrays"
                android:prompt="@string/major_prompt" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <Spinner
                android:id="@+id/minor_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:drawable/btn_dropdown"
                android:dropDownWidth="fill_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4">

            <Spinner
                android:id="@+id/country_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:drawable/btn_dropdown"
                android:dropDownWidth="fill_parent"
                android:entries="@array/country_arrays"
                android:prompt="@string/country_prompt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5">

            <Spinner
                android:id="@+id/work_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:drawable/btn_dropdown"
                android:dropDownWidth="fill_parent"
                android:entries="@array/work_arrays"
                android:prompt="@string/work_prompt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6">


            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:color/holo_orange_dark"
                android:text="Submit" />
        </LinearLayout>


    </LinearLayout>



</FrameLayout>
